Replace "Lead" with "SME"

--- a/src/react/pages/meet-the-smes-page.scss
+++ b/src/react/pages/meet-the-smes-page.scss
@@ -1,10 +1,10 @@
-.page-meet-the-leads main {
+.page-meet-the-smes main {
 	
 	.text-image-box {
 		
 		.text-box {
 			
-			.lead-header {
+			.sme-header {
 				
 				display: flex;
 				align-items: baseline;
