--- a/src/react/elements/page-flow/footer.scss
+++ b/src/react/elements/page-flow/footer.scss
@@ -9,7 +9,7 @@ footer {
 	margin-bottom: $spacing;
 	background-color: var(--color-bg);
 	
-	.frc-logo-horizontal-rule {
+	.logo-horizontal-rule {
 		
 		margin-bottom: 8px;
 		
