--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
 @font-face {
-	
-	font-family: "Spy Agency";
-	src: url("/assets/fonts/spyagency3_2.ttf") format("truetype");
-	
+  font-family: "Spy Agency";
+  src: url("/fonts/spyagency3_2.ttf") format("truetype");
 }
+
 
 * {
 	
