--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
 $pageWidth: 1000px;
 
-$backgroundColor: #2f3d2b;
+$backgroundColor: #282C34;
 $foregroundColor: white;
 $firstBlue: #0066B3;
 $firstRed: #ED1C24;
