--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
 $pageWidth: 1000px;
 
-$backgroundColor: #db1ad2;
+$backgroundColor: #2b5327;
 $foregroundColor: white;
 $firstBlue: #0066B3;
 $firstRed: #ED1C24;
