--- a/src/react/pages/meet-the-smes-page.scss
+++ b/src/react/pages/meet-the-smes-page.scss
@@ -1,45 +1,28 @@
-.page-meet-the-smes main {
+.page-meet-the-SMEs main {
 	
 	.text-image-box {
 		
 		.text-box {
 			
-			.sme-header {
+			.SME-header {
 				
 				display: flex;
 				align-items: baseline;
 				justify-content: center;
 				flex-wrap: wrap;
 				margin-bottom: 5px;
-				
-				h4, h6 {
-					
-					padding: 0 5px;
-					white-space: nowrap;
-					
-				}
+				padding: 0 5px;
+				//white-space: nowrap;
 				
 				h4 {
-					
-					font-size: 1.6em;
-					
+					font-size: 1.7rem;
 				}
 				
 				h6 {
-					
-					font-size: 1em;
-					opacity: 0.8;
-					font-weight: normal;
-					
+					font-size: 1rem;
 				}
 				
 			}
-			
-		}
-		
-		&.ian-elder .image-box img {
-			
-			object-position: center 10%;
 			
 		}
 		
