--- a/src/react/elements/page-flow/footer.scss
+++ b/src/react/elements/page-flow/footer.scss
@@ -8,6 +8,8 @@ footer {
 	
 	margin-bottom: $spacing;
 	background-color: var(--color-bg);
+
+	font-size: .95rem;
 	
 	.logo-horizontal-rule {
 		
@@ -28,9 +30,7 @@ footer {
 		.stay-connected {
 			flex: 1;
 			text-align: center;
-			order: 1;
 			flex-direction: column;
-			gap: 16px;
 			
 			.social-media-icons {
 				text-align: center;
@@ -56,15 +56,33 @@ footer {
 			text-align: center;
 
 			a {
-				text-decoration: none;
-				font-weight: bold;
+				text-decoration: underline;
 				color: white;
 			}
+			
 		}
 
 		.sponsor {
 			flex: 1;
 			text-align: center;
+			flex: 1;
+			text-align: center;
+			flex-direction: column;
+			p {
+				margin-bottom: 10px;
+			}		
+			a {
+				text-decoration: none;
+				position: relative;
+				top: 10px;
+				background: #203321;
+				font-weight: bold;
+				font-size: 1rem;
+				padding: 6px 6px; 
+				color: white;
+				border-radius: 3px;
+				border: 1px solid white;
+			}
 		}
 		
 	}
@@ -74,7 +92,6 @@ footer {
 			align-items: center;
 
 			.team-info { 
-				display: flex;
 				justify-content: space-between;
 				text-align: center;
 			}
