--- a/src/react/pages/sponsor-us.scss
+++ b/src/react/pages/sponsor-us.scss
@@ -36,7 +36,7 @@
 	a {
 		
 		text-decoration: none;
-		background: var(--color-first-blue);
+		background: #416443;
 		font-weight: bold;
 		font-size: 1.3rem;
 		padding: 12px 50px;
