--- a/src/react/elements/page-flow/header.scss
+++ b/src/react/elements/page-flow/header.scss
@@ -1,10 +1,9 @@
 @import "../../../assets/styles/variables";
 
 header {
-	
 	$spacing: 10px;
-	
-	@include expandToMaxWidth();
+	width: 100%;
+	max-width: var(--max-header-footer-width);
 	
 	margin-top: $spacing;
 	background-color: var(--color-bg);
