--- a/src/react/elements/page-flow/footer.scss
+++ b/src/react/elements/page-flow/footer.scss
@@ -7,7 +7,7 @@ footer {
 	max-width: var(--max-header-footer-width);
 	
 	margin-bottom: $spacing;
-	background-color: var(--color-bg);
+	background-color: #1e271f;
 
 	font-size: .95rem;
 	
