--- a/src/react/pages/home.scss
+++ b/src/react/pages/home.scss
@@ -1,5 +1,8 @@
 .page-home main {
-	
+
+	align-items: center;
+	text-align: center;
+
 	img.banner-image {
 		
 		width: 100%;
@@ -11,6 +14,25 @@
 		
 		text-align: justify;
 		
+	}
+
+	a {
+		text-decoration: none;
+		position: relative;
+		top: 10px;
+		background: #203321;
+		font-weight: bold;
+		font-size: 1rem;
+		padding: 6px  6px; 
+		color: white;
+		border-radius: 3px;
+		border: 1px solid white;
+
+		&:visited {
+			
+			color: white;
+			
+		}
 	}
 	
 }
