--- a/src/react/elements/page-flow/footer.scss
+++ b/src/react/elements/page-flow/footer.scss
@@ -21,7 +21,7 @@ footer {
 		margin-top: 10px;
 		display: flex;
 		justify-content: space-between;
-		padding: 0 $spacing / 2;
+		padding: 0 calc($spacing / 2);
 
 		hr {
 			padding: 0;
