--- a/src/react/pages/about-us.scss
+++ b/src/react/pages/about-us.scss
@@ -2,13 +2,38 @@
 	
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	
+	align-items: left;
+
 	p {
 		
-		text-align: center;
 		margin-bottom: 20px;
+		text-indent: 50px;
+		text-align: left;
 		
+		
+	}
+
+	img {
+		align-self: center;
+		max-width: 80%;
+		max-height: 650px;
+		border: 5px solid transparent;
+		outline: 2px solid white;
+		margin-bottom: 30px;
+		
+	}
+
+	ul {
+		align-self: center;
+		font-weight: bolder;
+		list-style-type: "➤";
+		//text-align: left;
+		font-size: 1.1rem;
+		line-height: 1.5;
+
+		li {
+			padding-left: 6px;
+		}
 	}
 	
 }
