--- a/src/react/pages/history-2024.scss
+++ b/src/react/pages/history-2024.scss
@@ -2,10 +2,19 @@
 	$spacing: 10px;
 	margin-top: 10px;
 	justify-content: space-between;
-	padding: 0 $spacing / 2;
+	padding: 0 calc($spacing / 2);
 	display: flex;
 	flex-direction: column;
-	//align-items: center;
+	align-items: center;
+
+	img {
+		
+		max-width: 80%;
+		border: 5px solid transparent;
+		outline: 2px solid white;
+		margin-bottom: 30px;
+		
+	}
 
 	p {
 		text-indent: 50px;
