--- a/src/react/pages/history.scss
+++ b/src/react/pages/history.scss
@@ -4,11 +4,41 @@
 	flex-direction: column;
 	align-items: center;
 	
+	img {
+		
+		max-width: 80%;
+		border: 5px solid transparent;
+		outline: 2px solid white;
+		margin-bottom: 30px;
+		
+	}
+
 	p {
 		
 		text-align: center;
 		margin-bottom: 20px;
 		
+	}
+
+	ul {
+		list-style-type: "➤";
+		line-height: 1.5;
+
+		li {
+			padding-left: 6px;
+
+			a {
+				text-decoration: none;
+				position: relative;
+				font-weight: bold;
+				font-size: 1rem;
+				color: white;
+
+				&:visited {
+					color: white;
+				}
+			}
+		}
 	}
 	
 }
