--- a/src/react/pages/history.scss
+++ b/src/react/pages/history.scss
@@ -29,6 +29,7 @@
 
 			a {
 				text-decoration: none;
+				text-decoration: underline;
 				position: relative;
 				font-weight: bold;
 				font-size: 1rem;
