Image Update and Background Color Change

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,8 +1,8 @@
 $pageWidth: 1000px;
-$maxHeaderFooterWidth: 1750px;
+$maxHeaderFooterWidth: 2050px;
 
-$backgroundColor: #1b2b1b;
-$footerBackgroundColor: #182417;
+$backgroundColor: #162116;
+$footerBackgroundColor: #162116;
 $foregroundColor: white;
 $firstBlue: #0066B3;
 $firstRed: #ED1C24;
