--- a/src/react/elements/page-flow/footer.scss
+++ b/src/react/elements/page-flow/footer.scss
@@ -7,9 +7,9 @@ footer {
 	max-width: var(--max-header-footer-width);
 	
 	margin-bottom: $spacing;
-	background-color: #1e271f;
+	background-color: #111612;
 
-	font-size: .95rem;
+	font-size: .9rem;
 	
 	.logo-horizontal-rule {
 		
