--- a/src/react/elements/page-flow/header.scss
+++ b/src/react/elements/page-flow/header.scss
@@ -6,7 +6,7 @@ header {
 	max-width: var(--max-header-footer-width);
 	
 	margin-top: $spacing;
-	background-color: var(--color-bg);
+	background-color: var(--color-fbg);
 	
 	div.header-content {
 		
