--- a/src/react/pages/home.scss
+++ b/src/react/pages/home.scss
@@ -9,9 +9,9 @@
 	img.banner-image {
 		
 		width: 100%;
-		padding: 10px 10px;
+		padding: 5px 5px;
 		border: 2px solid transparent;
-		//outline: 2px solid white;
+		outline: 2px solid white;
 		align-self: center;
 		border-radius: 30px;
 		
